fixed isImageUrl validation and updated scrollTo to jump instead of smoothscroll

--- a/src/components/elements/NodeList.less
+++ b/src/components/elements/NodeList.less
@@ -134,7 +134,7 @@ input.nodelist-item-title {
 }
 
 .nodelist-collection-grid li {
-  width: 12.35rem;
+  width: 12.4rem;
   max-height: 6.7rem;
   overflow: hidden;
   border: 0.1px solid #b8b8b8;
